# bili-insight

./: .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  ghcr-compose.env
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0002_app_settings.py  0003_stream_access_requirement.py  0004_retained_files.py  0005_stream_preview_metadata.py  0006_application_auth.py  d906dc4b1e71_initial_schema.py
backend/app/: __init__.py  container.py  main.py
backend/app/analysis/: __init__.py  asr.py  audio.py  errors.py  media.py  models.py  ocr.py  process.py  scenes.py  serialization.py  service.py  subtitles.py  summary.py
backend/app/api/: analyses.py  app_auth.py  artifacts.py  auth.py  dependencies.py  diagnostics.py  downloads.py  health.py  jobs.py  previews.py  router.py  settings.py  videos.py
backend/app/core/: __init__.py  config.py  exceptions.py  logging.py  middleware.py  process_limits.py  runtime.py
backend/app/db/: base.py  models.py  session.py
backend/app/media/: __init__.py  danmaku.py  download.py  ffmpeg.py  security.py
backend/app/providers/: __init__.py  bilibili.py  models.py
backend/app/schemas/: analyses.py  app_auth.py  artifacts.py  auth.py  base.py  diagnostics.py  jobs.py  previews.py  settings.py  video.py
backend/app/security/: __init__.py  cookies.py
backend/app/services/: analyses.py  app_auth.py  artifacts.py  auth.py  diagnostics.py  downloads.py  jobs.py  previews.py  runtime_settings.py  settings.py  (+1 more)
backend/tests/: conftest.py  test_analysis_jobs.py  test_api_analyses.py  test_api_auth.py  test_api_videos.py  test_app_auth.py  test_app_runtime.py  test_artifacts.py  test_config.py  test_cookies.py  test_diagnostics.py  test_downloads.py  test_health.py  test_jobs.py  test_logging.py  test_media_download.py  test_media_ffmpeg.py  test_media_security.py  test_previews.py  test_provider.py  test_settings.py
(+122 files in other folders)
